deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama
    app.kubernetes.io/instance: ollama
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /root/.ollama
          name: ollama
        tty: true
      volumes:
      - name: ollama
        persistentVolumeClaim:
          claimName: ollama
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama
  name: ollama
  namespace: ollama
spec:
  ports:
  - name: api
    port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama-webui
    app.kubernetes.io/instance: ollama-webui
  name: ollama-webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-webui
  template:
    metadata:
      labels:
        app: ollama-webui
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: ollama-webui
        image: ollama-webui:latest
        ports:
        - containerPort: 3000
          name: webui-http
          protocol: TCP
        extraHosts:
        - host.docker.internal:host-gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama-webui
  name: ollama-webui
  namespace: ollama
spec:
  ports:
  - name: webui-http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ollama-webui
  loadBalancerIP: 10.1.40.24
  type: LoadBalancer
