ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-webui
  namespace: ollama
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.ollama.monocompute.com`) # change to your domain
      kind: Rule
      services:
        - name: ollama-webui
          port: 3000
    - match: Host(`ollama.monocompute.com`) # change to your domain
      kind: Rule
      services:
        - name: ollama-webui
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: monocompute-tls # change to your cert name
